--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-database.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-storage.js"></script>
+  
 
 
     <script>
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         var firebaseConfig = {
-            apiKey: "AIzaSyD9bCmmdADlQ35FpjmbVWuWBZtc4VyGMJY",
-            authDomain: "formulario-9aef2.firebaseapp.com",
-            databaseURL: "https://formulario-9aef2-default-rtdb.firebaseio.com",
-            projectId: "formulario-9aef2",
-            storageBucket: "formulario-9aef2.appspot.com",
-            messagingSenderId: "699423900724",
-            appId: "1:699423900724:web:ef261f430e337a9578f661",
-            measurementId: "G-E96J03H91D"
+            apiKey: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+            authDomain: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+            databaseURL: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+            projectId: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+            storageBucket: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+            messagingSenderId: "XXXXXXXXXXXXXXXXXXXXXX",
+            appId: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+            measurementId: "XXXXXXXXXXXXXXXXXXXXXXX"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
